--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Heebo:100,200,300,regular,500,600,700,800,900"
+      href="https://fonts.googleapis.com/css?family=Heebo:100,200,300,regular,500,600,700,800,900&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Merienda:300,regular,500,600,700,800,900"
+      href="https://fonts.googleapis.com/css?family=Merienda:300,regular,500,600,700,800,900&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -21,16 +21,28 @@
           <div class="header__logo">
             <img src="./svg/logo_header.svg" alt="logo" />
           </div>
-          <svg class="header__active">
+          <!--<svg class="header__active">
             <use href="./svg/symbol-defs.svg#icon-header_home-icon"></use>
-          </svg>
+          </svg>-->
           <ul class="header__menu-list">
-            <li class="header__menu-item">Home</li>
-            <li class="header__menu-item">Explore</li>
-            <li class="header__menu-item">Classes</li>
-            <li class="header__menu-item">About Us</li>
-            <li class="header__menu-item">Privacy</li>
-            <li class="header__menu-item">Services</li>
+            <li class="header__menu-item">
+              <a href="./index.html" class="header__link">Home</a>
+            </li>
+            <li class="header__menu-item">
+              <a href="./index.html" class="header__link">Explore</a>
+            </li>
+            <li class="header__menu-item">
+              <a href="./index.html" class="header__link">Classes</a>
+            </li>
+            <li class="header__menu-item">
+              <a href="./index.html" class="header__link">About Us</a>
+            </li>
+            <li class="header__menu-item">
+              <a href="./index.html" class="header__link">Privacy</a>
+            </li>
+            <li class="header__menu-item">
+              <a href="./index.html" class="header__link">Services</a>
+            </li>
           </ul>
         </nav>
       </header>
@@ -71,6 +83,7 @@
               </p>
               <button class="lern__btn">Learn More</button>
             </div>
+
             <div class="lern__block-card">
               <svg class="lern__card-icon">
                 <use href="./svg/symbol-defs.svg#icon-ic_yoga"></use>
@@ -109,7 +122,6 @@
                 free hour, when our power of choice is untrammelled and when
                 nothing prevents our being able to do what we like best.”
               </p>
-
               <div class="practice__image-card">
                 <div class="practice__image-woomen">
                   <img src="./image/image_practice/woomen_practice.png" />
@@ -171,7 +183,7 @@
                         Intriduction, Strees Assesment
                       </p>
                     </div>
-                    <button class="breach__btn-play">
+                    <button class="breach__btn-play-top">
                       <span class="breach__icon-play">
                         <svg class="icon__play">
                           <use href="./svg/symbol-defs.svg#icon-Play"></use>
@@ -184,7 +196,7 @@
                       <h4 class="breach__sound-title">Crazy Wind Sound</h4>
                       <p class="breach__sound-info">Relex Mind</p>
                     </div>
-                    <button class="breach__btn-play">
+                    <button class="breach__btn-play-midl">
                       <span class="breach__icon-play">
                         <svg class="icon__play">
                           <use href="./svg/symbol-defs.svg#icon-Play"></use>
@@ -197,7 +209,7 @@
                       <h5 class="breach__sound-title">Mental Wellness</h5>
                       <p class="breach__sound-info">Strees Relief</p>
                     </div>
-                    <button class="breach__btn-play">
+                    <button class="breach__btn-play-bottom">
                       <span class="breach__icon-play">
                         <svg class="icon__play">
                           <use href="./svg/symbol-defs.svg#icon-Play"></use>
